# torrent-client-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.torrent  kali-linux-2020.4-vbox-amd64.ova.torrent
lib/bencode/: BDictionary.cpp  BDictionary.h  BInteger.cpp  BInteger.h  BItem.cpp  BItem.h  BItemVisitor.cpp  BItemVisitor.h  BList.cpp  BList.h  BString.cpp  BString.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  PrettyPrinter.cpp  PrettyPrinter.h  Utils.cpp  Utils.h  bencoding.h
lib/crypto/: sha1.cpp  sha1.h
res/: ComputerNetworks.torrent  MoralPsychHandbook.torrent  debian-10.10.0-amd64-netinst.iso.torrent  ubuntu-12.04.5-alternate-amd64.iso.torrent
src/: BitTorrentMessage.cpp  BitTorrentMessage.h  Block.h  PeerConnection.cpp  PeerConnection.h  PeerRetriever.cpp  PeerRetriever.h  Piece.cpp  Piece.h  PieceManager.cpp  PieceManager.h  SharedQueue.h  TorrentClient.cpp  TorrentClient.h  TorrentFileParser.cpp  TorrentFileParser.h  connect.cpp  connect.h  main.cpp  utils.cpp  utils.h
